[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/sprites/ComputerIcons1.png" type="Texture" id=1]
[ext_resource path="res://src/sprites/ComputerIcons3.png" type="Texture" id=2]
[ext_resource path="res://src/sprites/ComputerIcons2.png" type="Texture" id=3]
[ext_resource path="res://src/scenes/ComputerUI.gd" type="Script" id=4]

[node name="ComputerUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
hack_time = 10.0
clean_time = 20.0
game_time = 15.0
hack_reward = 25
clean_reward = 5
game_reward = 10

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 405.0
margin_top = 240.0
margin_right = 619.0
margin_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 207.0
margin_bottom = 113.0

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "Computer Controlls"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HackButton" type="TextureButton" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="CleanButton" type="TextureButton" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
texture_normal = ExtResource( 3 )

[node name="GameButton" type="TextureButton" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
texture_normal = ExtResource( 2 )

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 200.0
margin_bottom = 106.0
text = "Exit"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/HackButton" to="." method="_on_HackButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/CleanButton" to="." method="_on_CleanButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/GameButton" to="." method="_on_GameButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
